Create folder structure, add partial translation and simple login system

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xl-4 mt-5">
-      <mat-card>
-        <mat-card-content>
-          <div class="osp-logo"></div>
-          <form autocomplete="off">
-            <div class="login-input">
-              <i class="fa fa-user"></i>
-              <mat-form-field class="full-width">
-                <input matInput [placeholder]="'global.username' | translate">
-              </mat-form-field>
-            </div>
-            <div class="login-input">
-              <i class="fa fa-unlock-alt"></i>
-              <mat-form-field class="full-width">
-                <input type="password" matInput [placeholder]="'global.password' | translate">
-              </mat-form-field>
-            </div>
-            <button type="submit" class="login-btn mt-4 mb-3" mat-raised-button color="accent">
-              <span translate="global.login"></span>
-            </button>
-            <a href="#" class="forgot-password">
-              <span translate="global.forgotPassword"></span>
-            </a>
-          </form>
-        </mat-card-content>
-      </mat-card>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
