--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,9 +1,9 @@
 .menu {
   position: absolute;
-  top: 0;
+  top: 64px;
   left: 0;
   width: 290px;
-  height: 100vh;
+  height: calc(100vh - 64px);
   background-color: #C63D0F;
   color: #fff;
   font-size: 22px;
