--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li *ngFor="let item of menu">
       <img [src]="item.icon" alt="">
-      <a [routerLink]="['']" [translate]="item.translation"></a>
+      <a [routerLink]="['/' + item.link]" [translate]="item.translation"></a>
     </li>
     <li>
       <img src="../../../assets/image/menu/logout.png" alt="">
