--- a/src/app/main/firefighters/firefighters.component.html
+++ b/src/app/main/firefighters/firefighters.component.html
@@ -1,2 +1,7 @@
-<app-table [dataSource]="tableData" [config]="tableConfig"></app-table>
+<div class="mb-3">
+  <button mat-raised-button class="primary" (click)="openAddDialog()">
+    <span translate="firefighters.action.add"></span>
+  </button>
+</div>
+<app-table [dataSource]="tableData" [config]="tableConfig" (editAction)="openEditDialog()" (deleteAction)="openDeleteDialog()"></app-table>
 <app-pagination [config]="paginationConfig" (page)="changePage($event)"></app-pagination>
