Add comunication with backend, toastr and loader, code refactor

--- a/src/app/components/modal/confirm-modal/confirm-modal.component.html
+++ b/src/app/components/modal/confirm-modal/confirm-modal.component.html
@@ -12,7 +12,7 @@
     </div>
   </modal-body>
   <modal-footer>
-    <button mat-raised-button class="primary">
+    <button mat-raised-button class="primary" (click)="makeAction()">
       <span translate="global.remove"></span>
     </button>
   </modal-footer>
