--- a/src/app/main/firefighters/firefighters-delete/firefighters-delete.component.html
+++ b/src/app/main/firefighters/firefighters-delete/firefighters-delete.component.html
@@ -1,1 +1,2 @@
-<app-confirm-modal title="firefighters.delete.title" content="firefighters.delete.question"></app-confirm-modal>
+<app-confirm-modal title="firefighters.delete.title" content="firefighters.delete.question" [contentParams]="{name: data.name}"
+  (confirmAction)="removeFirefighters()"></app-confirm-modal>
