--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<ng-http-loader [debounceDelay]="0" [minDuration]="300" [entryComponent]="loaderComponent"></ng-http-loader>
 <app-navbar></app-navbar>
 <app-menu></app-menu>
 <div class="main-content">
