--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -11,7 +11,7 @@
   </mat-dialog-content>
 
   <mat-dialog-actions class="modal-footer" align="end">
-    <button mat-raised-button class="cancel mr-3" (click)="modal.close()">
+    <button type="button" mat-raised-button class="cancel mr-3" (click)="modal.close()">
       <span translate="global.cancel"></span>
     </button>
     <ng-content select="modal-footer"></ng-content>
