--- a/src/app/main/firefighters/firefighters.component.html
+++ b/src/app/main/firefighters/firefighters.component.html
@@ -3,5 +3,5 @@
     <span translate="firefighters.action.add"></span>
   </button>
 </div>
-<app-table [dataSource]="tableData" [config]="tableConfig" (editAction)="openEditDialog()" (deleteAction)="openDeleteDialog()"></app-table>
+<app-table [dataSource]="tableData" [config]="tableConfig" (editAction)="openEditDialog($event)" (deleteAction)="openDeleteDialog($event)"></app-table>
 <app-pagination [config]="paginationConfig" (page)="changePage($event)"></app-pagination>
