--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
+@import "~ngx-toastr/toastr.css";
+@import "~bootstrap/scss/_functions";
+@import "~bootstrap/scss/_variables";
+@import "~bootstrap/scss/_mixins";
+@import "~bootstrap/scss/_grid";
+@import "~bootstrap/scss/utilities/_spacing";
 
-@import '~bootstrap/scss/_functions';
-@import '~bootstrap/scss/_variables';
-@import '~bootstrap/scss/_mixins';
-@import '~bootstrap/scss/_grid';
-@import '~bootstrap/scss/utilities/_spacing';
-
-@import '~font-awesome/css/font-awesome.css';
+@import "~font-awesome/css/font-awesome.css";
 
 @include mat-core();
 
@@ -14,22 +14,18 @@ $my-theme-primary: mat-palette($mat-indigo, 700, 300, 900);
 $my-theme-accent: mat-palette($mat-light-blue);
 $my-theme-warn: mat-palette($mat-deep-orange, A200);
 
-$my-theme: mat-light-theme(
-    $my-theme-primary,
-    $my-theme-accent,
-    $my-theme-warn
-);
+$my-theme: mat-light-theme($my-theme-primary, $my-theme-accent, $my-theme-warn);
 
 @include angular-material-theme($my-theme);
 
 body {
   margin: 0;
-  background-color: #FDF3E7;
+  background-color: #fdf3e7;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .mat-menu-panel {
-  background: lighten($color: #3B3738, $amount: 10);
+  background: lighten($color: #3b3738, $amount: 10);
   .mat-menu-item {
     color: #fff;
   }
@@ -43,9 +39,14 @@ body {
 }
 
 .primary {
-  @include buttons(#C63D0F);
+  @include buttons(#c63d0f);
 }
 
 .cancel {
-  @include buttons(#3B3738);
+  @include buttons(#3b3738);
+}
+
+#spinner {
+  background-color: unset !important;
+  opacity: 1 !important;
 }
