Add view for equipment, with CRUD actions

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table" [style.width]="tableWidth">
 
   <ng-container *ngFor="let def of tableConfig" [matColumnDef]="def.name">
     <th mat-header-cell *matHeaderCellDef [ngStyle]="{ 'width': def.width }">
