Add modal to add actions to system

--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -28,6 +28,11 @@
         width: 95%;
       }
     }
+    .col-10, .col-11 {
+      .modal-input {
+        width: 100%;
+      }
+    }
   }
 }
 
