--- a/src/app/main/cars/cars-modal/cars-modal.component.html
+++ b/src/app/main/cars/cars-modal/cars-modal.component.html
@@ -23,7 +23,7 @@
           </mat-form-field>
         </div>
         <div class="col-6">
-          <app-date-time-picker formControlName="productionDate" placeholder="cars.productionDate"></app-date-time-picker>
+          <app-date-picker formControlName="productionDate" placeholder="cars.productionDate"></app-date-picker>
         </div>
       </div>
       <div class="row">
@@ -74,10 +74,10 @@
       </div>
       <div class="row">
         <div class="col-6">
-          <app-date-time-picker formControlName="technicalExaminationDate" placeholder="cars.technicalExaminationDate"></app-date-time-picker>
+          <app-date-picker formControlName="technicalExaminationDate" placeholder="cars.technicalExaminationDate"></app-date-picker>
         </div>
         <div class="col-6">
-          <app-date-time-picker formControlName="insuranceDate" placeholder="cars.insuranceDate"></app-date-time-picker>
+          <app-date-picker formControlName="insuranceDate" placeholder="cars.insuranceDate"></app-date-picker>
         </div>
       </div>
     </div>
