--- a/src/app/main/equipment/equipment-modal/equipment-modal.component.html
+++ b/src/app/main/equipment/equipment-modal/equipment-modal.component.html
@@ -11,7 +11,7 @@
           </mat-form-field>
         </div>
         <div class="col-6">
-          <app-date-time-picker formControlName="approvalDate" placeholder="equipment.approvalDate"></app-date-time-picker>
+          <app-date-picker formControlName="approvalDate" placeholder="equipment.approvalDate"></app-date-picker>
         </div>
       </div>
     </div>
