--- a/src/app/main/firefighters/firefighters-modal/firefighters-modal.component.html
+++ b/src/app/main/firefighters/firefighters-modal/firefighters-modal.component.html
@@ -36,10 +36,10 @@
 
       <div class="row">
         <div class="col-6">
-          <app-date-time-picker formControlName="birthdayDate" placeholder="firefighters.birthdayDate"></app-date-time-picker>
+          <app-date-picker formControlName="birthdayDate" placeholder="firefighters.birthdayDate"></app-date-picker>
         </div>
         <div class="col-6">
-          <app-date-time-picker formControlName="entryDate" placeholder="firefighters.entryDate"></app-date-time-picker>
+          <app-date-picker formControlName="entryDate" placeholder="firefighters.entryDate"></app-date-picker>
         </div>
       </div>
 
