--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import "~bootstrap/scss/_mixins";
 @import "~bootstrap/scss/_grid";
 @import "~bootstrap/scss/utilities/_spacing";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 
 @import "~font-awesome/css/font-awesome.css";
 
@@ -29,6 +30,10 @@ body {
   .mat-menu-item {
     color: #fff;
   }
+}
+
+.mat-checkbox-checked.mat-accent .mat-checkbox-background {
+  background-color: #c63d0f;
 }
 
 @mixin buttons($color) {
