--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -4,9 +4,9 @@
     <th mat-header-cell *matHeaderCellDef [ngStyle]="{ 'width': def.width }">
       <span *ngIf="isIcon(def.icon) || def.icon === iconTypes.GENDER" [translate]="def.translation"></span>
     </th>
-    <td mat-cell [ngStyle]="{ 'width': def.width }" *matCellDef="let element">
+    <td mat-cell [ngStyle]="{ 'width': def.width }" *matCellDef="let element; let dataIdx = index">
       <span *ngIf="def.type === columnType.TEXT && def.name !== 'index'" [innerText]="displayText(element, def.name)"></span>
-      <span *ngIf="def.type === columnType.TEXT && def.name === 'index'" [innerText]="idx + 1"></span>
+      <span *ngIf="def.type === columnType.TEXT && def.name === 'index'" [innerText]="dataIdx + 1"></span>
       <span *ngIf="def.type === columnType.DATE" [innerText]="element[def.name] | date: 'dd-MM-yyyy'"></span>
       <span *ngIf="def.type === columnType.TIME" [innerText]="element[def.name] | date: 'HH:mm'"></span>
       <span *ngIf="def.type === columnType.TRANSLATE_TEXT" [translate]="def.translationPrefix + '.' + element[def.name]"></span>
