Add login system

--- a/src/app/content/login/login.component.html
+++ b/src/app/content/login/login.component.html
@@ -8,7 +8,7 @@
             <div class="login-input">
               <i class="fa fa-user"></i>
               <mat-form-field class="full-width">
-                <input matInput formControlName="username" [placeholder]="'global.username' | translate">
+                <input matInput formControlName="login" [placeholder]="'global.username' | translate">
               </mat-form-field>
             </div>
             <div class="login-input">
