--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import "~bootstrap/scss/_variables";
 @import "~bootstrap/scss/_mixins";
 @import "~bootstrap/scss/_grid";
+@import "~bootstrap/scss/utilities/_display";
 @import "~bootstrap/scss/utilities/_spacing";
 @import "~ng-pick-datetime/assets/style/picker.min.css";
 
