--- a/src/app/components/date-picker/date-picker.component.html
+++ b/src/app/components/date-picker/date-picker.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="modal-input">
   <input matInput [matDatepicker]="picker" [placeholder]="placeholder | translate" [(ngModel)]="value" (ngModelChange)="changeDateValue()">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
+  <mat-datepicker #picker startView="multi-year" (yearSelected)="_selectYear($event, picker)"></mat-datepicker>
 </mat-form-field>
