--- a/src/app/main/actions/actions-modal/add-used-equipment-items/add-used-equipment-items.component.html
+++ b/src/app/main/actions/actions-modal/add-used-equipment-items/add-used-equipment-items.component.html
@@ -13,7 +13,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let equipmentItem of equipmentItems; let idx = index; trackBy: idx">
+                <tr *ngFor="let equipmentItem of equipmentItems; let idx = index; trackBy: trackByFn">
                   <td>
                     <mat-checkbox [(ngModel)]="checkboxesModel[idx]" (click)="selectEquipmentItem(equipmentItem)"></mat-checkbox>
                   </td>
