--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,9 +1,13 @@
 <section class="menu">
   <ul>
-    <li *ngFor="let item of menu">
-      <img [src]="item.icon" alt="">
-      <a [routerLink]="['/' + item.link]" [translate]="item.translation"></a>
-    </li>
+    <ng-container *ngFor="let item of menu">
+      <ng-container *ngIf="item.isVisible">
+          <li *appHasAnyAuthority="item.permision">
+            <img [src]="item.icon" alt="">
+            <a [routerLink]="['/' + item.link]" [translate]="item.translation"></a>
+          </li>
+      </ng-container>
+    </ng-container>
     <li>
       <img src="../../../assets/image/menu/logout.png" alt="">
       <a (click)="loginService.logout()" [ngStyle]="{'cursor': 'pointer'}" translate="menu.logout"></a>
