--- a/src/app/main/actions/actions-modal/actions-modal.component.html
+++ b/src/app/main/actions/actions-modal/actions-modal.component.html
@@ -23,13 +23,19 @@
           </mat-form-field>
         </div>
         <div class="col-6">
-            <mat-form-field class="modal-input">
-                <input matInput formControlName="eventAddress" [placeholder]="'actions.eventAddress' | translate">
-            </mat-form-field>
+          <mat-form-field class="modal-input">
+            <input matInput formControlName="eventAddress" [placeholder]="'actions.eventAddress' | translate">
+          </mat-form-field>
         </div>
       </div>
-      <mat-divider class="mt-3"></mat-divider>
-      <div class="row mt-3">
+      <div class="row">
+        <div class="col-6">
+          <mat-form-field class="modal-input">
+            <input matInput formControlName="reportNumber" [placeholder]="'actions.reportNumber' | translate">
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row mt-3" *ngIf="false">
         <div class="col-12">
             <button type="button" mat-raised-button class="primary mb-3" (click)="openCheckUsedEquipmentItems()">
               <span translate="actions.action.checkUsedEquipmentItems"></span>
